--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
     </div>
 
     <div class="buttons">
-        <button id="btnOne">1</button> <!--btn pour mode carré -->
-        <button id="btnTwo">2</button><!--btn pour mode cat -->
-        <button id="btnThree">3</button><!--btn pour mode butterfly -->
-        <button id="btnFour">4</button> <!--btn pour mode giraffe -->
-        <button id="btnFive">5</button> <!--btn pour mode avion -->
-        <button id="btnSix">6</button> <!-- btn pour mode oiseau-->
+        <button id="btnOne">1</button>
+        <button id="btnTwo">2</button>
+        <button id="btnThree">3</button>
+        <button id="btnFour">4</button> 
+        <button id="btnFive">5</button> 
+        <button id="btnSix">6</button> 
         <button id="btnSeven">7</button>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.js"></script>
